<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btu_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="buttonPressed"
        android:text="Manager" />

    <TextView
        android:id="@+id/Productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/Total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        android:text="@string/total"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnclicked"
                android:text="@string/one" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnclicked"
                android:text="@string/two" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnclicked"
                android:text="@string/three"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnclicked"
                android:text="@string/four"/>
            <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
                android:onClick="btnclicked"
            android:text="@string/five"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnclicked"
                android:text="@string/six"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
            android:onClick="btnclicked"
        android:text="@string/seven"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnclicked"
            android:text="@string/eight"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnclicked"
            android:text="@string/nine"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.3">
            <Button
                android:width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnclicked"
                android:text="@string/zero"/>

            <Button
                android:id="@+id/clear"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:width="0dp"
                android:onClick="btnclicked"
                android:text="@string/clear" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="buyClick"
        android:text="@string/buy" />
</LinearLayout>
    <TextView
        android:id="@+id/prodQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        />
    <ListView
        android:id="@+id/list_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="#f00"
        android:dividerHeight="1dp"
        tools:listitem="@layout/list_view"/>
</LinearLayout>